# SMARTCO-DeliveryStatus-Prediction

./: .gitignore  environment.yml  pyproject.toml  requirements.txt  run_bagging.sh  run_best_models_individual.sh  run_catboost.sh  run_check_xgb_cuda.sh  run_stacking.sh  run_voting.sh  run_xgboost.sh
data/processed/: advanced_logistic_regression_classification_report.csv  advanced_logistic_regression_predictions.csv  advanced_random_forest_classification_report.csv  advanced_random_forest_predictions.csv  benchmark_classification_report.csv  benchmark_predictions.csv  voting_classification_report.csv  voting_predictions.csv
output/imbalance_figures/: mitigation_summary_by_group_and_model.csv  sampler_summary_by_model.csv  sampler_summary_global.csv
output/metrics/: all_models_metrics.csv
output/optuna/: bagging_study.db  boosting_study.db  catboost_study.db  xgboost_study.db
output/predictions/: bagging_predictions.csv  catboost_predictions.csv  dummy_predictions.csv  stacking_predictions.csv  (+5 more)
src/: 01_prepare_data.py  02_EDA.py  02_benckmark.py  03_advanced_benchmark.py  03_feature_engineering.py  04_EDA.py  04_XGBoost.py  05_CatBoost.py  05_feature_engineering.py  06_Bagging.py  07_XGBoost.py  07_stacking.py  08_Boosting.py  08_CatBoost.py  08_Voting.py  08_analyze_optuna.py  09_Bagging.py  09_best_models_individual.py  10_benchmark.py  10_stacking.py  11_Voting.py  11_metrics_from_predictions.py  12_best_models_individual.py  12_generate_imbalance_figures.py  13_benchmark.py  14_metrics_from_predictions.py  15_generate_imbalance_figures.py  check_xgb_cuda.py
(+1 files in other folders)
